--- a/document/mmd-draft-djb.tex
+++ b/document/mmd-draft-djb.tex
@@ -86,7 +86,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2019-04-07}
+    \date{2019-04-09}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -127,7 +127,7 @@
 \hypertarget{rationale}{%
 \section{Rationale}\label{rationale}}
 
-All students pursuing a Bachelor's degree in Music from universities accredited by the National Association of Schools of Music must learn to take melodic dictation \citep[§VIII.6.B.2.A]{NationalAssociationSchools2018}.
+All students pursuing a Bachelor's degree in Music from universities accredited by the National Association of Schools of Music must learn to take melodic dictation \citep[§VIII.6.B.2.A]{NationalAssociationSchools2019}.
 Melodic dictation is a cognitively demanding process that requires students to hear a melody, then without any access to an external reference, transcribe the melody within a limited time frame.
 As of 2019 there are 643 Schools of Music belonging to National Association of Schools of Music (NASM)\footnote{\url{https://nasm.arts-accredit.org/directory-lists/accredited-institutions/search/?institutionname=\&city=\&state=\&country=\&search=true}}, meaning that thousands of students every year will be expected to learn this challenging task as part of their aural skills education.
 The implicit logic is that as one improves in their ability to take melodic dictation, this practice of critical and active listening develops one's ability to ``think in music'' \citep{bestMusicCurriculaFuture1992, karpinskiAuralSkillsAcquisition2000} and thus become a more competent musician.
@@ -328,7 +328,7 @@ Below I expand on what these categories entail, then explore each in-depth.
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth]{img/taxonomy4} 
+{\centering \includegraphics[width=1\linewidth]{img/taxonomy} 
 
 }
 
@@ -417,7 +417,7 @@ These modal models were then expanded on by Baddeley and Hitch \citep{baddeleyWo
 
 \begin{figure}
 
-{\centering \includegraphics[width=9.81in]{img/wm_models} 
+{\centering \includegraphics[width=1\linewidth]{img/wm_models} 
 
 }
 
@@ -1105,40 +1105,6 @@ zAN & Number Series\\
 \end{tabular}
 \end{table}
 
-Variables are listed in the table below:
-
-\begin{longtable}[]{@{}ll@{}}
-\toprule
-Abbreviation & Variable\tabularnewline
-\midrule
-\endhead
-gen & General Self-Report Musical Sophistication\tabularnewline
-wmc & Working Memory Capacity\tabularnewline
-gf & General Fluid Intelligence\tabularnewline
-zIS & Identify What is Special\tabularnewline
-zHO & Hear Once Sing Back\tabularnewline
-zSB & Sing Back After 2-3\tabularnewline
-zDS & Don't Sing In Public\tabularnewline
-zSH & Sing In Harmony\tabularnewline
-zJI & Join In\tabularnewline
-zNI & Number of Instruments\tabularnewline
-zRP & Regular Practice\tabularnewline
-zNCS & Not Consider Self Musician\tabularnewline
-zNcV & Never Complimented\tabularnewline
-zST & Self Tonal\tabularnewline
-zCP & Compare Performances\tabularnewline
-zAd & Addiction\tabularnewline
-zSI & Search Internet\tabularnewline
-zWr & Writing About Music\tabularnewline
-zFr & Free Time\tabularnewline
-zTP & Tone Span\tabularnewline
-zMS & Symmetry Span\tabularnewline
-zMO & Operation Span\tabularnewline
-zRA & Ravens\tabularnewline
-zAN & Number Series\tabularnewline
-\bottomrule
-\end{longtable}
-
 \hypertarget{structural-equation-models}{%
 \subsubsection{Structural Equation Models}\label{structural-equation-models}}
 
@@ -1325,7 +1291,7 @@ While of course with each student there are inevitably many variables at play in
 As students progress, they are expected to be able to dictate more difficult melodies, yet exactly what makes a melody complex and thus difficult to dictate is often left to the expertise and intuition of a pedagogue.
 Intuition is an important skill for teachers to cultivate, but when it comes to determining objective measures of judgment, research from decision making science tends to suggest that no matter the expertise, collective and objective knowledge tends to outperform a single person's judgment \citep{kahnemanThinkingFastSlow2012, loggAlgorithmAppreciationPeople2019, meehlClinicalStatisticalPrediction1954}.
 Having more clearly defined performance benchmarks also helps remove biases in grading that teachers may or may not be explicitly aware of.
-Recent research has suggested that even aural skills pedagoges are open to the idea of looking for more standardization in aural skills assessments \citep{paneyTeachingMelodicDictation2014}.
+Recent research has suggested that even aural skills pedagogues are open to the idea of looking for more standardization in aural skills assessments \citep{paneyTeachingMelodicDictation2014}.
 
 In this chapter I survey and examine how tools from computational musicology can be used to help model an aural skills pedagogue's notion of complexity in melodies.
 First, I establish that theorists agree on the differences in melodic complexity using results from a survey of 40 aural skills pedagogues.
@@ -1357,9 +1323,9 @@ After piloting the randomly sampled melodies on a colleague, I again randomly sa
 I ran the survey from January 31st of 2019 until March 7th, 2019.
 The survey comprised of two sets of questions.
 
-Six questions asked about the teaching background of respondents and can be found in \ref{surveQuestions1}.
+Six questions asked about the teaching background of respondents and can be found in \ref{surveyQuestions1}.
 These questions were followed by asking participants to make five ratings over the 20 different melodies.
-The five questions can be found in \ref{fig:surveQuestions2}.
+The five questions can be found in \ref{fig:surveyQuestions2}.
 To encourage participation, two \$30 cash prize was offered to two participants.
 The survey had questions that specifically were designed to gauge their appropriateness for use in a melodic dictation context.
 Participants were recruited exclusively online and all provided consent to partaking in the data collection as approved by the Louisiana State University Institutional Review Board.
@@ -1763,16 +1729,16 @@ Additionally, \ref{fig:corfeaturetable} displays the five strongest positive and
 Feature & Difficulty & Grammar\tabularnewline
 \midrule
 \endhead
-i.abs.std & 0.8858728 & -0.8205238\tabularnewline
-i.abs.mean & 0.8737730 & -0.9077636\tabularnewline
-step.cont.loc.var & 0.8680327 & -0.7364870\tabularnewline
-i.entropy & 0.8516330 & -0.7359731\tabularnewline
-p.entropy & 0.8397031 & -0.7209406\tabularnewline
-d.median & -0.1919713 & 0.2224165\tabularnewline
-d.eq.trans & -0.2000724 & 0.0391843\tabularnewline
-mean.Yules.K & -0.4341525 & 0.3988128\tabularnewline
-tonalness & -0.4778019 & 0.4435525\tabularnewline
-mean.Simpsons.D & -0.5656707 & 0.5033565\tabularnewline
+i.abs.std & 0.89 & -0.82\tabularnewline
+i.abs.mean & 0.87 & -0.91\tabularnewline
+step.cont.loc.var & 0.87 & -0.74\tabularnewline
+i.entropy & 0.85 & -0.74\tabularnewline
+p.entropy & 0.84 & -0.72\tabularnewline
+d.median & -0.19 & 0.22\tabularnewline
+d.eq.trans & -0.20 & 0.04\tabularnewline
+mean.Yules.K & -0.43 & 0.40\tabularnewline
+tonalness & -0.48 & 0.44\tabularnewline
+mean.Simpsons.D & -0.57 & 0.50\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -1885,29 +1851,29 @@ Combining the Hick-Hyman hypothesis together with the above statistical learning
 \section{Frequency Facilitation Hypothesis}\label{frequency-facilitation-hypothesis}}
 
 The frequency facilitation hypothesis (FFH) makes two important assumptions that rely on both the statistical learning hypothesis and the perceptual facilitation hypothesis.
-The first, as stated above, is that humans learn melodies via the means predicted by the statistical learning hypothesis.
-In line with Huron's reading of the Hick-Hyman Law, melodic information that people are more familiar with will consequently be more expected.
-More expected notes will tax memory less than unexpected notes.
+The first, as stated above, is that humans learn melodies via the statistical learning hypothesis.
+In line with Huron's reading of the Hick-Hyman Law, melodic information that listeners are more familiar with will consequently be processed more quickly.
+More expected notes will tax memory processing less than unexpected notes.
 This assertion would also be predicted by the probabilistic prediction hypothesis.
 Thus, given a sequence any set of notes, the frequency facilitation hypothesis posits that the efficiency in which a melody is processed in memory is proportionally related to its degree of expectedness when quantified in information content.
-Specifically, measures of expectation derived from computational models of auditory cognition like IDyOM should be able to serve as a proxy for melodic information.
+Specifically, measures of expectation derived from computational models of auditory cognition like IDyOM should be able to serve as a proxy for musical information.
 This falls within the bounds of Pearce's assertion that using the expectancy measures from a melody could be used as a sort of memory proxy \citep{pearceStatisticalLearningProbabilistic2018a}.
 
 This hypothesis generates testable predictions that can be investigated to verify its verisimilitude.
 Important to aural skills pedagogy, the primary prediction from this hypothesis would be that melodic patterns that occur more frequently in a corpus will be be easier to remember than those occurring less frequently.
 These frequency patterns should then directly relate to the amount of information content calculated by IDyOM.
 If this relationship does exist, then it can be used to create strategies that would then create a more linear path to success for students learning to take melodic dictation.
-
 In the final section of this chapter, I investigate this claim by conducting an analysis on a corpus of sight singing melodies to demonstrate this claim.
 I then take the findings from this corpus analysis and how how it can be applied in the aural skills classroom.
 
 \hypertarget{corpus-analysis}{%
 \subsection{Corpus Analysis}\label{corpus-analysis}}
 
-In order to investigate frequency facilitation hypothesis, I conducted a corpus study using N = 622 melodies from the above used Fifth Edition of the Berkowitz ``A New Approach to Sight Singing'' \citep{berkowitzNewApproachSight2011}.
-The FFH predicts that more frequently occurring patterns will result in lower information content-- a general (tautological) byproduct of quantifying musical feature tokens and doing computations with IC-- and that these lower information content measures, when quantified, will be able to predict load on memory.
-In order to examine this I first extracted a series of the most frequently occurring melodic tri grams from the Berkowitz corpus after transposing each melody to C major via the \texttt{solfa} tool in humdrum.
-I plot the resulting distributions of the top 1000 patterns of each fixed order predictions below in \ref{fig:bitriquint} and \ref{fig:bitriquint2}.
+In order to investigate frequency facilitation hypothesis, I conducted a corpus study using N = 622 melodies from the above using the Fifth Edition of the Berkowitz ``A New Approach to Sight Singing'' \citep{berkowitzNewApproachSight2011}.
+The FFH predicts that more frequently occurring patterns will result in lower information content-- a general byproduct of quantifying musical feature tokens with information content in a multiple viewpoints framework-- and that these lower information content measures, when quantified, will be able to predict load on memory.
+
+In order to examine this I first extracted a series of the most frequently occurring melodic tri-grams from a subset of the \emph{MeloSol} corpus after transposing each melody to C major via the \texttt{solfa} tool in humdrum.
+I plot the resulting distributions of the top 1,000 patterns of each fixed order predictions below in \ref{fig:bitriquint} and \ref{fig:bitriquint2}.
 
 \begin{figure}
 
@@ -1928,16 +1894,26 @@ I plot the resulting distributions of the top 1000 patterns of each fixed order 
 \end{figure}
 
 From \ref{fig:bitriquint}, we see that when plotted in terms of their frequency distributions, a small amount of the patterns make up for a very large the distribution of the corpus.
-As evident from \ref{fig:bitriquint}, we see that with the addition of more tokens added to the m-grams and also is a visual representation of why and how statistical predictions become more unreliable with higher order predictions.
+As evident from \ref{fig:bitriquint}, we see that with the addition of more tokens added to the n-grams, this results in avisual representation of why and how statistical predictions become more unreliable with higher order predictions \citep{conklinMultipleViewpointSystems1995}.
 Intuitively, melodic patterns from the high frequency distribution of the table would seemingly be easier to remember and then dictate than those from the tails of the distributions.
 
-Following up on this analysis, I then trained an IDyOM model on the same corpus of melodies and thus was able to calculate the average information content the opening bi, tri, and quint grams melodies in this corpus.
+Following up on this analysis, I then trained an IDyOM model on the same corpus of melodies and thus was able to calculate the average information content for the first five notes of each melody in the corpus.
 In this computation, I explicitly assume that the underlying corpus of data is representative of an individual's personal expectations of musical material.
+In Figure \ref{fig:quintdist}, I visualize the cumulative information content that the first five notes of each of melodies that that the corpus was trained on.
+I chose to additionally split the corpus into quintiles to further highlight the progressive changes in information content when these incipits are sorted based on their cumulative information content.
 
-From these computations, we can see that almost tautologically, that tri-grams with higher cumulative information content appear with lower frequency and m-grams with lower cumulative information content occur more frequently.
+\begin{figure}
 
-This observation may seem tautological, as this relationship would result from how information content is calculated (more expected patterns have less information), but the novel assertion here is connecting the cumulative information content to ease of memory load.
-For example, in Figure \ref{fig:tridensity}, we see that when split into three sections, random samples from the the corpus when partitioned into three sections, even just the opening of the first five notes of each melody increase per group.\footnote{This same trend is also apparent using a general linear model across the entire corpus. I chose to model it with three groups for more effective communication.}
+{\centering \includegraphics[width=1\linewidth]{img/five_incipit_distiribution} 
+
+}
+
+\caption{ }\label{fig:quintdist}
+\end{figure}
+
+This observation may seem tautological, as this relationship would result from how information content is calculated since more expected patterns have less information content.
+The novel assertion here is connecting the cumulative information content to memory load.
+For example, in Figure \ref{fig:tridensity}, we see that when split into three sections, random samples from the the corpus when partitioned into three sections, even just the opening of the first five notes of each melody increase per group.
 
 \begin{figure}
 
@@ -1948,9 +1924,9 @@ For example, in Figure \ref{fig:tridensity}, we see that when split into three s
 \caption{Average Information Content of First Five Notes of Melodies}\label{fig:tridensity}
 \end{figure}
 
-To visualize what this might look like in a melodic dictation context, we could imagine randomly sampling melodies from even smaller sections (warranted by seeing the blip of data in the first quarterly).
-If quantified using information content measures, these five grams would then fill up the finite bin of memory than that were more unexpected, or had more information content associated with them.
-I visualize this difference in XXXX where I plot similar length five grams filling up the window of memory at different rates based on their cumulative information content.
+To visualize what this might look like in a melodic dictation context, we could imagine randomly sampling melodies from even smaller sections.
+If quantified using information content measures, these five grams would then fill up the finite bin of memory faster than that were more unexpected, or had more information content associated with them.
+I visualize this difference in Figure \ref{fig:cumplot} where I plot similar length five grams filling up the window of memory at different rates based on their cumulative information content.
 
 \begin{figure}
 
@@ -1961,7 +1937,8 @@ I visualize this difference in XXXX where I plot similar length five grams filli
 \caption{Cumlative Information Content in Melodic Incipts}\label{fig:cumplot}
 \end{figure}
 
-Lastly, to further investigate this claim of cumulative information content, I calculated the average information content for each melody used the experiment above based on several measures then used data from the survey above and plotted it against the measures of expert ratings for difficulty for the classroom and found various measures of information content to be very good predictors of difficulty ratings.
+Lastly, to further investigate this claim of cumulative information content, I calculated various information content measures for each melody used the survey above then used the resulting data to plot it against the measures of expert ratings for difficulty for the classroom.
+In Figure \ref{fig:modelcomparison}, the resulting visualization shows measures of information content to be very good predictors of difficulty ratings.
 I believe that this gives credence to thinking more about using computational measures in designing appropriate curricular measures.
 
 \begin{figure}
@@ -2673,7 +2650,7 @@ Additionally, individuals with higher working memory capacity would be able to t
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.75\linewidth]{img/cumSchubert} 
+{\centering \includegraphics[width=1\linewidth]{img/SchubertPlotNew} 
 
 }
 
@@ -2683,6 +2660,18 @@ Additionally, individuals with higher working memory capacity would be able to t
 It is important to highlight that the notes above the melody here are dependent on what is current in the Prior Knowledge module.
 A corpus of Prior Knowledge with less musical events would lead to higher information content measures for each set of notes, while a Prior Knowledge that has extensive tracking of the patterns would lead to lower information content \citep{conklinMultipleViewpointSystems1995}.
 This increase in predictive accuracy mathematically reflects the intuition that those with more listening experience can process greater chunks of musical information.
+I visualize what setting the explicit/implicit threshold on a set of various n-grams in Figure \ref{fig:thresholds}.
+While I have arbitrarily set the thresholds here for illustrative purposes, in practice this could be done a number of different ways.
+For example, these thresholds could be set by based on frequency counts in the corpus, relative distributions, or the parameters might be computationally derived.
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth]{img/pk_grampanel} 
+
+}
+
+\caption{Setting Prior Knowledge Limits}\label{fig:thresholds}
+\end{figure}
 
 \hypertarget{setting-limits-with-transcribe}{%
 \subsection{Setting Limits with Transcribe}\label{setting-limits-with-transcribe}}
